Updated README and templates

--- a/Templates/about.html
+++ b/Templates/about.html
@@ -20,8 +20,8 @@
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
       <p>
-        Welcome everyone to my Blog. I have used Flask, HTML, CSS, JS and
-        Bootstrap in this project.
+        Welcome everyone to my Blog. I have used Flask, HTML5, CSS3, JavaScript
+        and Bootstrap in this project.
       </p>
       <p>This project is created by Ved.</p>
     </div>
